liberación final para entregar el reproductor de video para la tarea de streaming en la web

--- a/css/mi_reproductor.css
+++ b/css/mi_reproductor.css
@@ -122,7 +122,8 @@ select.boton_controles{
 }
 
 select.boton_controles:hover{
-    background-color: skyblue;
+    background-color: black;
+    color: white;
 }
 
 select.boton_controles:active{
